Finalize project: Complete development and enhance UI
This commit encompasses the full review and enhancement of the Basariat POS system as per the project documentation and implementation plan (Sprints 0-8).

Key areas addressed:
- Core Setup & UI Shell: Established main frame, styling, i18n (RTL/LTR), login, center profile setup, about/help framework.
- User Management & Config: Implemented user/permission management, admin configuration for center profile, bank names, expense/product categories, app settings. Basic shift UI controls.
- Patient & Diagnostics: Full patient CRUD, optical diagnostic recording and history, WhatsApp consent, shift interruption handling.
- Inventory & POs: Product catalog, inventory item management (stock, pricing, variations), stock adjustments, full purchase order lifecycle including stock receiving and auto-updates to inventory/costs.
- Sales Processing: Sales order creation (all item types: stock, service, custom lens, custom quote), discount application, status management, active shift linkage, WhatsApp 'Order Ready' notification.
- Payments & Expenses: Payment processing against sales orders, abandoned order workflow with financial impact logging, general expense management with shift linkage for cash expenses, stock deduction for completed sales.
- Shift Closing & Reporting (Core): Full shift lifecycle (end shift, reconciliation), initial shift reporting UI. Appointment management module (CRUD, list, form, WhatsApp reminders). Foundational UI and service/repository layers for core reports (P&L, Low Stock, Sales Detail, Expense, Inv Valuation, Outstanding Payments, Patient History).
- Audit Logging, Permissions, Templates, Report Polish: Audit log viewing UI. System-wide permission checks refined. WhatsApp template editing enhanced. Print/Export functionality reviewed/added to reports.
- Final Polish: User Manuals (EN/AR) updated. UI styles reviewed and enhanced. Application version updated.

Adhered to specified architecture, sty