@@ -2,208 +2,196 @@ package com.basariatpos.ui.controller;
 
 import com.basariatpos.i18n.LocaleManager;
 import com.basariatpos.i18n.MessageProvider;
-import com.basariatpos.main.AppLauncher; // For mocking static methods if needed, or getting UserService
+import com.basariatpos.main.AppLauncher;
 import com.basariatpos.model.UserDTO;
 import com.basariatpos.service.UserException;
 import com.basariatpos.service.UserService;
-import com.basariatpos.service.UserServiceImpl; // To provide a concrete instance for AppLauncher mock
-import com.basariatpos.repository.UserRepositoryImpl; // For concrete UserService instance
 
+import javafx.application.Platform;
+import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.Node;
-import javafx.scene.Parent;
-import javafx.scene.Scene;
+import javafx.scene.control.Button;
+import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableView;
+import javafx.scene.control.cell.PropertyValueFactory;
+import javafx.scene.layout.BorderPane;
 import javafx.stage.Stage;
-import javafx.stage.Window;
 
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
-import org.testfx.api.FxRobot;
-import org.testfx.framework.junit5.ApplicationExtension;
-import org.testfx.framework.junit5.Start;
-import org.testfx.util.WaitForAsyncUtils;
-
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
-import static org.testfx.matcher.control.TableViewMatchers.hasNumRows;
-import static org.testfx.matcher.control.TableViewMatchers.containsRow;
-import static org.testfx.matcher.control.LabeledMatchers.hasText;
 
+@ExtendWith(MockitoExtension.class)
+public class UserManagementControllerTest {
 
-@ExtendWith(ApplicationExtension.class)
-class UserManagementControllerTest {
+    @Mock private UserService mockUserService;
+    @Mock private TableView<UserDTO> usersTable;
+    @Mock private TableColumn<UserDTO, String> usernameColumn;
+    @Mock private TableColumn<UserDTO, String> fullNameColumn;
+    @Mock private TableColumn<UserDTO, String> roleColumn;
+    @Mock private TableColumn<UserDTO, String> statusColumn;
+    @Mock private Button editUserButton;
+    @Mock private Button toggleActivityButton;
+    @Mock private Button resetPasswordButton;
+    @Mock private BorderPane userManagementRootPane; // For RTL
 
-    @Mock
-    private UserService mockUserService;
+    @Spy // Use Spy to allow partial mocking if TableView's internal list is used directly
+    private ObservableList<UserDTO> userObservableList = FXCollections.observableArrayList();
 
+    @InjectMocks
     private UserManagementController controller;
-    private Parent root;
-    private Stage stage;
 
-    private MockedStatic<AppLauncher> appLauncherMockedStatic;
-
-
-    @Start
-    private void start(Stage stage) throws IOException {
-        MockitoAnnotations.openMocks(this);
-        this.stage = stage;
-
-        // Mock AppLauncher to provide the mocked UserService
-        // This simulates how the controller would get its service instance
-        appLauncherMockedStatic = Mockito.mockStatic(AppLauncher.class);
-        // The controller under test news up its own UserService, so we need to use the setter.
-        // If AppLauncher.getUserService() was used by controller, this would be:
-        // appLauncherMockedStatic.when(AppLauncher::getUserService).thenReturn(mockUserService);
+    private static ResourceBundle resourceBundle;
+    private MockedStatic<AppLauncher> mockAppLauncherStatic;
+    private MockedStatic<Platform> mockPlatformStatic;
 
 
-        LocaleManager.setCurrentLocale(LocaleManager.DEFAULT_LOCALE); // Ensure consistent locale
-        ResourceBundle bundle = MessageProvider.getBundle();
-
-        FXMLLoader loader = new FXMLLoader(getClass().getResource("/com/basariatpos/ui/view/UserManagementView.fxml"));
-        loader.setResources(bundle);
-
-        // Controller is instantiated by FXMLLoader. We'll inject the mock service via setter post-load.
-        root = loader.load();
-        controller = loader.getController();
-        controller.setUserService(mockUserService); // Manually inject the mock service
-
-        Scene scene = new Scene(root, 900, 700);
-        stage.setScene(scene);
-        stage.show();
-        stage.toFront();
+    @BeforeAll
+    static void setUpClass() {
+        LocaleManager.setCurrentLocale(Locale.ENGLISH);
+        resourceBundle = MessageProvider.getBundle();
+        try {
+            new javafx.embed.swing.JFXPanel(); // Initializes JavaFX toolkit
+        } catch (Exception e) {
+            // Ignore if already initialized or running in a TestFX environment
+        }
     }
 
     @BeforeEach
-    void setUp() throws UserException {
-        // Default behavior for mockUserService
-        UserDTO user1 = new UserDTO(1, "admin", "Administrator", "Admin", true, Arrays.asList("MANAGE_USERS"), null);
-        UserDTO user2 = new UserDTO(2, "cashier1", "Cashier One", "Cashier", true, Arrays.asList("CAN_GIVE_DISCOUNT"), null);
-        when(mockUserService.getAllUsers()).thenReturn(Arrays.asList(user1, user2));
+    void setUp() {
+        // Manual injection of @FXML mocks
+        controller.usersTable = usersTable;
+        controller.usernameColumn = usernameColumn;
+        controller.fullNameColumn = fullNameColumn;
+        controller.roleColumn = roleColumn;
+        controller.statusColumn = statusColumn;
+        controller.editUserButton = editUserButton;
+        controller.toggleActivityButton = toggleActivityButton;
+        controller.resetPasswordButton = resetPasswordButton;
+        controller.userManagementRootPane = userManagementRootPane;
+        // controller.userObservableList is already part of the controller instance due to @Spy
 
-        // Trigger a refresh of the table with mocked data
-        // This might require a public method in controller or careful TestFX interaction
-        // If initialize calls loadUsers, and setUserService also calls loadUsers, it should be fine.
-        controller.setUserService(mockUserService); // Re-apply to trigger loadUsers if it's in the setter
+        // Mock AppLauncher static calls
+        mockAppLauncherStatic = Mockito.mockStatic(AppLauncher.class);
+        mockAppLauncherStatic.when(AppLauncher::getUserService).thenReturn(mockUserService);
+
+        mockPlatformStatic = Mockito.mockStatic(Platform.class);
+        mockPlatformStatic.when(() -> Platform.runLater(any(Runnable.class))).thenAnswer(invocation -> {
+            invocation.<Runnable>getArgument(0).run();
+            return null;
+        });
+
+
+        // Simulate that the usersTable uses our spy list
+        when(usersTable.getItems()).thenReturn(userObservableList);
+        // Mock selection model for listeners
+        TableView.TableViewSelectionModel<UserDTO> mockSelectionModel = mock(TableView.TableViewSelectionModel.class);
+        when(usersTable.getSelectionModel()).thenReturn(mockSelectionModel);
+
+
+        controller.initialize(null, resourceBundle);
     }
 
     @AfterEach
-    void tearDown(FxRobot robot) {
-         // Close any dialogs opened during tests
-        List<Window> allWindows = new ArrayList<>(robot.listWindows());
-        allWindows.stream()
-            .filter(window -> window instanceof Stage && window != stage) // Don't close primary stage
-            .forEach(window -> robot.targetWindow(window).interact(Stage::close));
-        WaitForAsyncUtils.waitForFxEvents();
-
-        if(appLauncherMockedStatic != null) appLauncherMockedStatic.close();
-    }
-
-
-    @Test
-    void tablePopulated_onInitialize(FxRobot robot) {
-        TableView<UserDTO> usersTable = robot.lookup("#usersTable").queryTableView();
-        assertNotNull(usersTable);
-        assertEquals(2, usersTable.getItems().size(), "Table should have two users from mock service.");
-
-        // Verify content of a row (more robust with custom matchers or cell checks)
-        // This is a basic check for username.
-        ObservableList<UserDTO> items = usersTable.getItems();
-        assertTrue(items.stream().anyMatch(u -> u.getUsername().equals("admin")));
-        assertTrue(items.stream().anyMatch(u -> u.getUsername().equals("cashier1")));
+    void tearDown() {
+        mockAppLauncherStatic.close();
+        mockPlatformStatic.close();
     }
 
     @Test
-    void addUserButton_opensDialog_andAddsUser_onSave(FxRobot robot) throws UserException, IOException {
-        // Arrange: Mock what happens when dialog is saved
-        UserDTO newUserFromDialog = new UserDTO(0, "newuser", "New User", "Cashier");
-        UserDTO savedUserWithId = new UserDTO(3, "newuser", "New User", "Cashier", true, new ArrayList<>(), null);
+    void initialize_setsUpTableColumnsAndLoadsUsers() throws UserException {
+        // Verify column setup (PropertyValueFactory means we can't easily verify the exact factory instance)
+        verify(usernameColumn).setCellValueFactory(any(PropertyValueFactory.class));
+        verify(fullNameColumn).setCellValueFactory(any(PropertyValueFactory.class));
+        verify(roleColumn).setCellValueFactory(any(PropertyValueFactory.class));
+        verify(statusColumn).setCellValueFactory(any()); // For SimpleStringProperty lambda
 
-        when(mockUserService.createUser(any(UserDTO.class), anyString())).thenReturn(savedUserWithId);
-        when(mockUserService.getAllUsers()).thenReturn(Arrays.asList( // Simulate list after adding
-            new UserDTO(1, "admin", "Administrator", "Admin"),
-            new UserDTO(2, "cashier1", "Cashier One", "Cashier"),
-            savedUserWithId
-        ));
+        // Verify users are loaded
+        List<UserDTO> testUsers = List.of(new UserDTO(1L, "test1", "Test User 1", "Admin", "hash", true, null));
+        when(mockUserService.getAllUsers()).thenReturn(testUsers);
 
+        // Re-trigger loadUsers as initialize might have already called it with a different mock state for userService
+        // if AppLauncher.getUserService() was not fully mocked before controller.initialize() in setup().
+        // Best to ensure service is fully mocked before initialize() is called.
+        // For this test, explicitly calling loadUsers() after setting up the mock for getAllUsers().
+        controller.loadUsers();
 
-        // Act: Click Add User button
-        robot.clickOn("#addUserButton");
-        WaitForAsyncUtils.waitForFxEvents(); // Wait for dialog to appear
+        assertEquals(1, userObservableList.size());
+        assertEquals("test1", userObservableList.get(0).getUsername());
 
-        // At this point, UserFormDialog is open. We need to interact with it.
-        // This requires TestFX to target the new dialog window.
-        // For simplicity, we'll assume the dialog controller works and mock its outcome.
-        // A more complete test would robot.clickOn dialog fields.
-        // For this subtask, testing the dialog interaction is complex.
-        // We will assume UserManagementController's logic for *handling* a successful dialog.
-
-        // To simulate dialog save:
-        // 1. The dialog would call userService.createUser. This is mocked.
-        // 2. Then UserManagementController reloads users. This is also mocked.
-
-        // We need a way to simulate the dialog closing and returning "saved".
-        // This part is hard without deeper TestFX dialog handling or refactoring controller
-        // to make dialog interaction more testable unit-wise.
-
-        // For now, let's verify that if userService.createUser was called (as if by dialog),
-        // the table would refresh. The dialog opening itself is a UI event.
-        // The test below focuses on the *consequence* of the dialog being successfully processed.
-
-        // This test as written here cannot fully test the dialog interaction.
-        // It would need a way to mock the UserFormDialogController's result.
-        // Let's assume the dialog is shown, and manually verify service call if dialog was completed.
-        // This is a known limitation for this test's scope.
-
-        // A simplified assertion: Check if the button action tries to load the FXML.
-        // This doesn't test the full dialog flow but verifies the button starts the process.
-        // (This requires no mocking of the dialog itself for this simple check)
-
-        // To verify dialog opening:
-        List<Window> windows = robot.listWindows();
-        assertTrue(windows.stream().anyMatch(w -> w instanceof Stage && ((Stage)w).getTitle().equals(MessageProvider.getString("usermanagement.dialog.addUser.title"))),
-                   "Add User dialog should open.");
-
-        // To properly test the rest, we'd need to control the dialog. For now, close it.
-        windows.stream()
-            .filter(w -> w instanceof Stage && ((Stage)w).getTitle().equals(MessageProvider.getString("usermanagement.dialog.addUser.title")))
-            .findFirst().ifPresent(w -> robot.targetWindow(w).interact(Stage::close));
-
+        verify(userManagementRootPane).setNodeOrientation(javafx.scene.NodeOrientation.LEFT_TO_RIGHT);
     }
 
     @Test
-    void editUserButton_enables_onSelection(FxRobot robot) {
-        Button editButton = robot.lookup("#editUserButton").queryButton();
-        assertTrue(editButton.isDisabled(), "Edit button should be disabled initially.");
+    void loadUsers_handlesUserException() throws UserException {
+        when(mockUserService.getAllUsers()).thenThrow(new UserException("DB connection failed"));
 
-        robot.clickOn(".table-row-cell"); // Click on the first row
-        WaitForAsyncUtils.waitForFxEvents();
+        // Act: loadUsers is called in initialize, or can be called directly
+        // For this test, let's ensure it's called and doesn't throw upwards
+        assertDoesNotThrow(() -> controller.loadUsers());
 
-        assertFalse(editButton.isDisabled(), "Edit button should be enabled after selecting a user.");
+        // Verify that an error alert would be shown (cannot directly test JavaFX alerts easily)
+        // but we can check that the list remains empty or unchanged.
+        assertTrue(userObservableList.isEmpty());
     }
 
-    // Further tests would cover:
-    // - handleEditUserButtonAction (similar complexity to addUser with dialogs)
-    // - handleToggleActivityButtonAction (shows confirmation, calls service, refreshes table)
-    // - handleResetPasswordButtonAction (shows dialog, calls service)
-    // - Error handling when service calls fail.
-    // - Correct status text display in table (Active/Inactive localization).
+    @Test
+    void initialize_setsRTL_forArabicLocale() {
+        LocaleManager.setCurrentLocale(LocaleManager.ARABIC);
+        resourceBundle = MessageProvider.getBundle();
+
+        controller.initialize(null, resourceBundle); // Re-initialize for Arabic
+
+        verify(userManagementRootPane, atLeastOnce()).setNodeOrientation(javafx.scene.NodeOrientation.RIGHT_TO_LEFT);
+
+        LocaleManager.setCurrentLocale(Locale.ENGLISH); // Reset
+    }
+
+    // Tests for handleAddUserButtonAction, handleEditUserButtonAction, etc.
+    // would require mocking FXMLLoader and the dialog controllers.
+    // These become more like integration tests or require a UI testing framework like TestFX
+    // to properly manage dialog stages and user interactions.
+
+    // Example: Sketch for handleAddUserButtonAction test (would need FXML loader mocking)
+    /*
+    @Test
+    void handleAddUserButtonAction_opensDialogAndRefreshesTableOnSave() throws IOException, UserException {
+        // Mock FXMLLoader and UserFormDialogController
+        // ...
+
+        // Simulate dialog being saved
+        // when(mockDialogController.isSaved()).thenReturn(true);
+        // when(mockDialogController.getUserData()).thenReturn(newUser);
+        // when(mockDialogController.getPassword()).thenReturn("newPass");
+        // when(mockDialogController.getSelectedPermissions()).thenReturn(List.of("perm1"));
+        // when(mockUserService.createUser(any(UserDTO.class), anyString())).thenReturn(createdUser);
+
+        // controller.handleAddUserButtonAction(mock(ActionEvent.class));
+
+        // verify(mockUserService).createUser(any(), any());
+        // verify(mockUserService).grantPermission(anyLong(), eq("perm1"));
+        // verify(mockUserService, times(2)).getAllUsers(); // Initial load + refresh
+    }
+    */
+
+    // Similarly, tests for edit, toggle activity, reset password would need dialog interaction mocking.
+    // The focus of this unit test is primarily the UserManagementController's own logic,
+    // like table setup, data loading, and main UI state changes (button disable/enable based on selection).
 }
